--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
-  <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
-
-  <div>
+  <h1>The Great <span id="colorDisplay">RGB</span> Guessing Game</h1>
+  <div id="stripe">
+    <button id="reset">New Colors</button>
     <span id="message"></span>
+    <button class="mode">Easy</button>
+    <button class="mode selected">Hard</button>
   </div>
 
   <div class="container">
